--- a/WyzCS/htdocs/subpage3.html
+++ b/WyzCS/htdocs/subpage3.html
@@ -33,6 +33,11 @@
         <button id="returnButton3">Return to Home</button>
     </div>
 
+    <div class="new-box3 hidden">
+        <p>This rant has been reported. Thank you!</p>
+        <button id="returnButton3">Return to Home</button>
+    </div>
+
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const textarea = document.querySelector('.textarea');
